--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"firebase": "^4.1.2",
+		"lodash": "^4.17.4",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
 		"react-native-router-flux": "^3.40.1",
